@startuml Class Diagram - Rate & Feedback (Use Case 8)
!theme plain

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 30

top to bottom direction

package "Presentation" {
  class ExperienceController <<controller>> {
    - _rateFeedbackService : IRateFeedbackService
    --
    + SubmitVisitFeedback(request : VisitFeedbackRequest) : IActionResult
  }
}

package "Application" {
  interface IRateFeedbackService <<service>> {
    + CreateVisitWithFeedbackAsync(request : VisitFeedbackRequest, travelerId : Guid, ct?) : Task<VisitFeedbackResponse?>
  }

  class RateFeedbackService <<service>> {
    - _visitRepository : IVisitRepository
    - _ratingRepository : IRatingRepository
    - _feedbackRepository : IFeedbackRepository
    - _rewardService : IRewardService
    --
    + CreateVisitWithFeedbackAsync(request : VisitFeedbackRequest, travelerId : Guid, ct?) : Task<VisitFeedbackResponse?>
  }

  interface IRewardService <<service>> {
    + AddRewardPointsAsync(userId : Guid, points : int, reason : string, ct?) : Task
  }

  class RewardService <<service>> {
    + AddRewardPointsAsync(userId : Guid, points : int, reason : string, ct?) : Task
  }

  interface IVisitRepository <<repository>> {
    + ExistsVisitAsync(travelerId : Guid, experienceId : Guid, journeyId : Guid, ct?) : Task<bool>
    + SaveAsync(visit : Visit, ct?) : Task<Visit>
  }

  interface IRatingRepository <<repository>> {
    + SaveAsync(rating : Rating, ct?) : Task<Rating>
  }

  interface IFeedbackRepository <<repository>> {
    + SaveAsync(feedback : Feedback, ct?) : Task<Feedback>
  }
}

package "Infrastructure" {
  class VisitRepository <<repository>> {
    - _context : AppDbContext
    --
    + ExistsVisitAsync(...) : Task<bool>
    + SaveAsync(visit : Visit, ct?) : Task<Visit>
  }

  class RatingRepository <<repository>> {
    - _context : AppDbContext
    --
    + SaveAsync(rating : Rating, ct?) : Task<Rating>
  }

  class FeedbackRepository <<repository>> {
    - _context : AppDbContext
    --
    + SaveAsync(feedback : Feedback, ct?) : Task<Feedback>
  }
}

package "DTOs" {
  class VisitFeedbackRequest <<DTO>> {
    + ExperienceId : Guid
    + JourneyId : Guid
    + RatingValue : int
    + FeedbackText : string
    + PhotoUrls : List<string>
  }

  class VisitFeedbackResponse <<DTO>> {
    + VisitId : Guid
    + RatingId : Guid
    + FeedbackId : Guid
    + PointsEarned : int
  }
}

package "Domain" {
  class Visit <<entity>> {
    + Id : Guid
    + TravelerId : Guid?
    + ExperienceId : Guid?
    + JourneyId : Guid?
    + VisitedAt : DateTime?
    + ActualDurationMinutes : int?
    + PhotoUrls : List<string>?
  }

  class Rating <<entity>> {
    + Id : Guid
    + VisitId : Guid?
    + TravelerId : Guid?
    + ExperienceId : Guid?
    + Rating1 : int?
    + CreatedAt : DateTime?
  }

  class Feedback <<entity>> {
    + Id : Guid
    + VisitId : Guid?
    + TravelerId : Guid?
    + ExperienceId : Guid?
    + FeedbackText : string?
    + IsApproved : bool?
    + IsFlagged : bool?
  }

  class MicroExperience <<entity>> {
    + Id : Guid
    + Name : string
  }

  class User <<entity>> {
    + Id : Guid
    + Email : string
  }
}

' Relationships
ExperienceController --> IRateFeedbackService

RateFeedbackService ..|> IRateFeedbackService
RateFeedbackService --> IVisitRepository
RateFeedbackService --> IRatingRepository
RateFeedbackService --> IFeedbackRepository
RateFeedbackService --> IRewardService

RewardService ..|> IRewardService

VisitRepository ..|> IVisitRepository
RatingRepository ..|> IRatingRepository
FeedbackRepository ..|> IFeedbackRepository

ExperienceController ..> VisitFeedbackRequest
ExperienceController ..> VisitFeedbackResponse
IRateFeedbackService ..> VisitFeedbackRequest
IRateFeedbackService ..> VisitFeedbackResponse

Visit "1" --> "0..1" Rating
Visit "1" --> "0..1" Feedback
Visit "*" --> "1" MicroExperience : experience
Visit "*" --> "1" User : traveler

@enduml